force-app/main/default/objects/OpportunityCostPlan__c/OpportunityCostPlan__c.object-meta.xml
<CustomObject>
    <label>Opportunity Cost Plan</label>
    <nameField>
        <label>Cost Plan</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Cost Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>