force-app/main/default/objects/OpportunityCostPlan__c/fields/IsConfirmed__c.field-meta.xml
<CustomField>
    <fullName>IsConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed</label>
    <type>Checkbox</type>
</CustomField>